test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/scalar_initializer_for_array.plx
pub fn main(none) i32 {
    #  You can't initialize an array with a scalar expression.
    arr: [1]i32 = 4
    return arr[0]
}
